src/objects/Payment_Allocation__x.object
<CustomObject>
    <description>Heroku Postgres Table - uat$Payment_Allocation (Will be replaced)</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>uat$Payment_Allocation</externalName>
    <fields>
        <fullName>account_number__c</fullName>
        <description>account_number</description>
        <externalDeveloperName>account_number</externalDeveloperName>
        <label>account_number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bill_id__c</fullName>
        <description>bill_id</description>
        <externalDeveloperName>bill_id</externalDeveloperName>
        <label>bill_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>notice_collection_id__c</fullName>
        <description>notice_collection_id</description>
        <externalDeveloperName>notice_collection_id</externalDeveloperName>
        <label>notice_collection_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>online_cllection_id__c</fullName>
        <description>online_cllection_id</description>
        <externalDeveloperName>online_cllection_id</externalDeveloperName>
        <label>online_cllection_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <description>paid_amount</description>
        <externalDeveloperName>paid_amount</externalDeveloperName>
        <label>paid_amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_account_id__c</fullName>
        <description>payment_account_id</description>
        <externalDeveloperName>payment_account_id</externalDeveloperName>
        <label>payment_account_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_id__c</fullName>
        <description>payment_id</description>
        <externalDeveloperName>payment_id</externalDeveloperName>
        <label>payment_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>account_number__c</columns>
        <columns>bill_id__c</columns>
        <columns>id__c</columns>
        <columns>notice_collection_id__c</columns>
        <columns>online_cllection_id__c</columns>
        <columns>paid_amount__c</columns>
        <columns>payment_account_id__c</columns>
        <columns>payment_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Payment Allocations</pluralLabel>
</CustomObject>